[gd_scene load_steps=6 format=3 uid="uid://cfhxj7bxiopth"]

[ext_resource type="Script" path="res://scripts/phone_screen.gd" id="1_yfggk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mrkbj"]
bg_color = Color(0, 0.47451, 0.0862745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1h7kk"]
bg_color = Color(0, 0.745098, 0.0862745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tu5b4"]
bg_color = Color(0.6, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrbee"]
bg_color = Color(1, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 0.356
anchor_bottom = 0.948
offset_right = -0.320007
offset_bottom = 0.0799561
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yfggk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.890196, 0.890196, 0.890196, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Call"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Number" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Buttons" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Button6" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Button7" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Button8" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Button9" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="Button0" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="ButtonCall" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_mrkbj")
theme_override_styles/hover = SubResource("StyleBoxFlat_1h7kk")
text = "Call"

[node name="ButtonBack" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "[X]"

[node name="Calling" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="Calling"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Calling/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="CallingLabel" type="Label" parent="Calling/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Calling..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Number2" type="Label" parent="Calling/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="FunButtons" type="GridContainer" parent="Calling/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="Button" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Button2" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Button3" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Button4" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Button5" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Button6" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Button7" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Button8" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Button9" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="Button0" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="ButtonEnd" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_tu5b4")
theme_override_styles/hover = SubResource("StyleBoxFlat_vrbee")
text = "End"

[node name="ButtonBack" type="Button" parent="Calling/MarginContainer/VBoxContainer/FunButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "[X]"

[connection signal="pressed" from="Calling/MarginContainer/VBoxContainer/FunButtons/ButtonEnd" to="." method="_on_button_end_pressed"]
